logando com google e github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=epictask
+
+#  configuranto o usuario
+
+
+# -- GITHUB --
+spring.security.oauth2.client.registration.github.client-id=Ov23li7vejWLzL5GKp8K
+spring.security.oauth2.client.registration.github.client-secret=f455212cb1a225fc943813ad3b1d02c72c0afa9b
+
+# settings -> developer settings -> OAuth Apps -> new oauth app -> EpickTask -> http://localhost:8080  ->  http://localhost:8080/login/oauth2/code/github -> register  ->  
+
+# -- GOOGLE --
+spring.security.oauth2.client.registration.google.client-id=id
+spring.security.oauth2.client.registration.google.client-secret=secret
+
+# console google -> console do Google Cloud -> novo projeto -> seleciona o projeto -> apis e serviços -> tela de permissao oAuth  -> vamos começar -> epicktask -> larissampmuniz@gmail.com -> 
