add propriedades do google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=epictask
+spring.thymeleaf.encoding=UTF-8
 
 #  configuranto o usuario
 
@@ -10,7 +11,7 @@ spring.security.oauth2.client.registration.github.client-secret=f455212cb1a225fc
 # settings -> developer settings -> OAuth Apps -> new oauth app -> EpickTask -> http://localhost:8080  ->  http://localhost:8080/login/oauth2/code/github -> register  ->  
 
 # -- GOOGLE --
-spring.security.oauth2.client.registration.google.client-id=id
-spring.security.oauth2.client.registration.google.client-secret=secret
+spring.security.oauth2.client.registration.google.client-id=463834375663-5rf9mue8onaeaukkqtubv7un9jn7p11v.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 
-# console google -> console do Google Cloud -> novo projeto -> seleciona o projeto -> apis e serviços -> tela de permissao oAuth  -> vamos começar -> epicktask -> larissampmuniz@gmail.com -> 
+# console google -> console do Google Cloud -> novo projeto -> seleciona o projeto -> apis e serviços -> tela de permissao oAuth  -> vamos começar -> epicktask -> larissampmuniz@gmail.com -> externo -> seu email -> avançar -> concordo -> criar -> criar ID do cliente do OAuth -> app web -> epictask-web -> URIs: http://localhost:8080/login/oauth2/google -> criar -> id -> epictask-web -> i -> chaves secretas -> copia 
