refactor(security): Externaliza credenciais de autenticação
- Move as credenciais do GitHub e Google para variáveis de ambiente.
- Substitui os valores de client-id e client-secret por placeholders.
- A aplicação agora lê as credenciais das variáveis de ambiente , ,  e .

Essa mudança aumenta a segurança do projeto, evitando a exposição de chaves secretas no código-fonte, o que é uma má prática.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.messages.encoding=UTF-8
 
 
 # -- GITHUB --
-spring.security.oauth2.client.registration.github.client-id=Ov23li7vejWLzL5GKp8K
-spring.security.oauth2.client.registration.github.client-secret=f455212cb1a225fc943813ad3b1d02c72c0afa9b
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_SECRET}
 
 # settings -> developer settings -> OAuth Apps -> new oauth app -> EpickTask -> http://localhost:8080  ->  http://localhost:8080/login/oauth2/code/github -> register  ->  
 
 # -- GOOGLE --
-spring.security.oauth2.client.registration.google.client-id=463834375663-5rf9mue8onaeaukkqtubv7un9jn7p11v.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_SECRET}
 
 # console google -> console do Google Cloud -> novo projeto -> seleciona o projeto -> apis e serviços -> tela de permissao oAuth  -> vamos começar -> epicktask -> larissampmuniz@gmail.com -> externo -> seu email -> avançar -> concordo -> criar -> criar ID do cliente do OAuth -> app web -> epictask-web -> URIs: http://localhost:8080/login/oauth2/google -> criar -> id -> epictask-web -> i -> chaves secretas -> copia 
